Fix layout on small screens

--- a/client/web/src/enterprise/batches/detail/BatchChangeBurndownChart.scss
+++ b/client/web/src/enterprise/batches/detail/BatchChangeBurndownChart.scss
@@ -6,4 +6,10 @@
             display: inline-block;
         }
     }
+    &__container {
+        @include media-breakpoint-down(xs) {
+            flex-direction: column-reverse;
+            align-items: flex-start !important;
+        }
+    }
 }
